<!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ * Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ * Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ * Neither the name of copyright holder nor the names of its
  ~   contributors may be used to endorse or promote products derived from
  ~   this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">GlosavES</string>
    <string name="feature_name">VegaSeal</string>

    <string name="title">@string/app_name</string>

    <string name="title_arm_control">Управление охраной</string>
    <string name="title_lora_manager">Менеджер LPWAN</string>

    <string name="arm_check">проверка...</string>
    <string name="arm_state_prepare">Ожидание троса...</string>
    <string name="arm_button_prepare">Подготовка к охране</string>
    <string name="arm_button_arm">Поставить на охрану</string>
    <string name="arm_button_disarm">Снять с охраны</string>
    <string name="arm_gamma_error">Ошибка модуля</string>
    <string name="arm_state_true">Охрана активна</string>
    <string name="arm_state_false">Охрана снята</string>
    <string name="arm_state_unknown">неизвестно</string>
    <string name="arm_state_timeout">Таймаут ожидания</string>
    <string name="arm_alarm">ТРЕВОГА!</string>
    <string name="arm_alert">Предупреждение!</string>

    <string name="device_serial_number"><b>Серийный номер</b></string>
    <string name="device_temperature"><b>Температура</b></string>
    <string name="device_battery"><b>Заряд АКБ:</b></string>
    <string name="device_state"><b>Потребление:</b></string>
    <string name="device_oid"><b>OID:</b></string>
    <string name="device_is_sleep"><b>Состояние:</b></string>

    <string name="unknown_device">Неизвестное уст-во</string>

    <string name="button_unknown">UNKNOWN</string>
    <string name="charge_percent">95%</string>

    <string name="location_permission_title">ТРЕБУЕТСЯ РАЗРЕШЕНИЕ МЕСТОПОЛОЖЕНИЯ</string>
    <string name="location_permission_info">Начиная с Android 6.0 Marshmallow, приложение требует разрешения местоположения для сканирования устройств Bluetooth Low Energy.
      \n\nЭто связано с тем, что маяки Bluetooth LE, например iBeacons или Eddystone, могут использоваться для определения местоположения телефона и пользователя. <b> VegaSeal </b> не будет использовать эту информацию каким-либо образом.</string>
    <string name="location_permission_action">Разрешить доступ</string>
    <string name="location_permission_settings">Настройки</string>

    <string name="bluetooth_disabled_title">BLUETOOTH ОТКЛЮЧЕН</string>
    <string name="bluetooth_disabled_info">Адаптер Bluetooth выключен. Нажмите кнопку ниже, чтобы включить его.</string>
    <string name="bluetooth_disabled_action">Включить</string>

    <string name="blinky_guide_title">НЕТ ВАШЕГО УСТРОЙСТВА?</string>
    <string name="blinky_guide_info">1. Убедитесь что к вашему уст-ву <b>подключен АКБ</b>.
        \n\n2. Убедитесь что заряда АКБ достаточно (напряжение >= 3.0В)
        \n\n3. Убедитесь что <b>Синий светодиод</b> мигает два раза при подключении АКБ</string>
    <string name="blinky_guide_location_info">4. Местоположение отключено. Некоторые Android-телефоны требуют его включения для сканирования устройств Bluetooth LE.
		Если вы уверены, что ваше устройство работает, но оно здесь не отображается, нажмите кнопку ниже, чтобы включить «Определение Местоположения».</string>
    <string name="blinky_guide_location_action">Включить</string>

    <string name="state_scanning">Сканирование…</string>
    <string name="state_connecting">Подключение…</string>
    <string name="state_discovering_services">Обнаружение сервисов…</string>
    <string name="state_initializing">Инициализация…</string>
    <string name="state_discovering_services_completed">%s готово</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Address (5 byte hex):</string>
    <string name="gps_latitute">Широта</string>
    <string name="gps_longitude">Долгота</string>
    <string name="gps_altitude">Высота</string>
    <string name="gps_speed">Скорость</string>
    <string name="gps_satelites">Спутников</string>
    <string name="gsm_registered">Регистрация сети</string>
    <string name="gsm_ready">Готовность модема</string>
    <string name="gps_fix_time">Время</string>
    <string name="charge_status"><b>Зарядка</b></string>
    <string name="boot_cause_status"><b>Причина запуска</b></string>
    <string name="gamma_state">Состояние ГАММА</string>
</resources>
