<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ * Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ * Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ * Neither the name of copyright holder nor the names of its
  ~   contributors may be used to endorse or promote products derived from
  ~   this software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".BlinkyActivity"
	tools:ignore="ContentDescription">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay" />

	</android.support.design.widget.AppBarLayout>

	<ScrollView
		android:id="@+id/device_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/appbar_layout"
		android:visibility="visible">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.v7.widget.CardView
				android:id="@+id/info_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:background="@android:color/white"
				app:cardElevation="1dp">

				<android.support.constraint.ConstraintLayout
					android:id="@+id/info_container"
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<android.support.v7.widget.Toolbar
						android:id="@+id/info_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_bluetooth_searching"
						app:title="@string/title_device_name"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<TextView
						android:id="@+id/info_state"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginEnd="8dp"
						android:padding="@dimen/activity_horizontal_margin"
						android:text="@string/charge_percent"
						app:layout_constraintEnd_toEndOf="@+id/info_tool_bar" />

					<TextView
						android:id="@+id/info_device_serial"
						android:layout_width="150dp"
						android:layout_height="wrap_content"
						android:layout_marginEnd="8dp"
						android:padding="5dp"
						android:text="@string/device_serial_number"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/info_tool_bar" />

					<TextView
						android:id="@+id/info_device_serial_value"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="5dp"
						android:text="value"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintLeft_toRightOf="@+id/info_device_serial"
						app:layout_constraintTop_toTopOf="@+id/info_device_serial" />

					<TextView
						android:id="@+id/info_device_temp"
						android:layout_width="150dp"
						android:layout_height="wrap_content"
						android:layout_marginEnd="8dp"
						android:padding="5dp"
						android:text="@string/device_temperature"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/info_device_serial" />

					<TextView
						android:id="@+id/info_device_temp_value"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="8dp"
						android:layout_marginStart="8dp"
						android:padding="5dp"
						android:text="value"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toEndOf="@+id/info_device_temp"
						app:layout_constraintTop_toBottomOf="@+id/info_device_serial" />

					<TextView
						android:id="@+id/info_device_state"
						android:layout_width="150dp"
						android:layout_height="wrap_content"
						android:layout_marginEnd="8dp"
						android:padding="5dp"
						android:text="@string/device_state"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/info_device_temp" />

					<TextView
						android:id="@+id/info_device_state_value"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="8dp"
						android:layout_marginStart="8dp"
						android:padding="5dp"
						android:text="value"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toEndOf="@+id/info_device_state"
						app:layout_constraintTop_toBottomOf="@+id/info_device_temp" />

				</android.support.constraint.ConstraintLayout>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:id="@+id/led_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:background="@android:color/white"
				app:cardElevation="1dp">

				<android.support.constraint.ConstraintLayout
					android:id="@+id/arm_container"
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<android.support.v7.widget.Toolbar
						android:id="@+id/arm_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_lightbulb_outline"
						app:title="@string/title_arm_control"
						app:titleMarginStart="@dimen/toolbar_title_margin" />


					<Button
						android:id="@+id/arm_control_btn"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="8dp"
						android:layout_marginStart="8dp"
						android:text="@string/arm_button_prepare"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/arm_tool_bar" />

					<ProgressBar
						android:id="@+id/arm_progress_bar"
						style="?android:attr/progressBarStyle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="1dp"
						android:visibility="visible"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/arm_tool_bar"
						app:layout_constraintVertical_bias="1.0" />

					<TextView
						android:id="@+id/arm_control_state"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:layout_marginStart="8dp"
						android:padding="10dp"
						android:text="@string/arm_state_unknown"
						app:layout_constraintStart_toEndOf="@+id/arm_progress_bar"
						app:layout_constraintTop_toBottomOf="@+id/arm_tool_bar" />

				</android.support.constraint.ConstraintLayout>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:id="@+id/button_card"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/activity_horizontal_margin"
				android:layout_marginTop="5dp"
				android:background="@android:color/white"
				app:cardElevation="1dp">

				<android.support.constraint.ConstraintLayout
					android:id="@+id/button_container"
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<android.support.v7.widget.Toolbar
						android:id="@+id/button_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_radio_button_checked"
						app:title="@string/title_lora_manager"
						app:titleMarginStart="@dimen/toolbar_title_margin"
						app:titleTextColor="@android:color/black" />

					<ListView
						android:id="@+id/LoraListView"
						android:layout_width="match_parent"
						android:layout_height="200dp"
						app:layout_constraintTop_toBottomOf="@+id/add_lora_item" />

					<Button
						android:id="@+id/add_lora_item"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="8dp"
						android:layout_marginStart="8dp"
						android:text="Добавить"
						app:layout_constraintEnd_toEndOf="parent" />

				</android.support.constraint.ConstraintLayout>
			</android.support.v7.widget.CardView>
		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:id="@+id/progress_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:padding="@dimen/activity_horizontal_margin"
		android:visibility="gone">

		<TextView
			android:id="@+id/connection_state"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="16sp"
			tools:text="@string/state_connecting" />

		<ProgressBar
			android:id="@+id/progress_bar"
			style="@style/Widget.AppCompat.ProgressBar.Horizontal"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:indeterminate="true" />
	</LinearLayout>
</RelativeLayout>